VC-24 Move repeatable methods to utils module
+ move parser to a dedicated class